<resources>
    <string name="app_name">Felony Delegate</string>
    <string name="fName">First Name</string>
    <string name="mName">Middle Name</string>
    <string name="lName">Last Name</string>
    <string name="enterMobile">Enter Mobile No.</string>
    <string name="getLocation">Get Location</string>
    <string name="userRegister">Register/Login</string>
    <string name="userWarning">This App needs to access your Location inorder to work properly!</string>
    <string name="reportSuspicion">Suspicious Activity</string>
    <string name="reportCriminal">Criminal Spotted</string>
    <string name="reportComplaint">Register Complaint</string>
    <string name="reportWantedList">Wanted List</string>
    <string name="reportSOS">SOS</string>
    <string name="title_activity_classified">Classified</string>
    <string name="go_back">Back</string>
    <string name="report">Report</string>
    <string name="reportTheft">Theft</string>
    <string name="reportViolence">Violence</string>
    <string name="description">Description of Criminal/Incident (If Available)</string>
    <string name="uploadPhoto">Upload Photo</string>
    <string name="uploadVideo">Upload Video</string>
    <string name="criminalDescription">Description (If Any)</string>
    <string name="reportHarass">Harassment</string>
    <string name="registerSuspicion">Suspicion List</string>
    <string name="registerCriminal">Criminal Reported</string>
    <string name="registerWantedList">Update Wanted List</string>
    <string name="registerComplaint">Complaints</string>
    <string name="registerClients">Users List</string>
    <string name="registerClassified">Authorized Users</string>
    <string name="done">Done</string>
    <string name="age">Age</string>
    <string name="userInfo">User Details</string>
    <string name="showImage">View Image</string>
    <string name="showVideo">View Video</string>
    <string name="enterPassword">Enter Password (Minimum 8 Digits)</string>
    <string name="reEnterPassword">Re-Enter Password</string>
    <string name="enter_e_mail">Enter E-mail</string>
</resources>