<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#09123b"
    android:orientation="vertical"
    tools:context=".ClassifiedActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/classifiedToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:padding="5sp"
        android:layout_margin="5sp"
        android:background="@drawable/scrollview_shape"
        app:menu="@menu/main_menu">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:textColor="#FFC107"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:fontFamily="@font/allerta"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/textview_shape"
        android:layout_margin="10sp"
        android:orientation="vertical">

    <Button
        android:id="@+id/registerSuspicion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/scrollview_shape"
        android:layout_margin="20sp"
        android:gravity="center"
        android:text="@string/registerSuspicion"
        android:textStyle="bold"
        android:textColor="#FFEB3B"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/registerWantedList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/scrollview_shape"
        android:layout_margin="20sp"
        android:gravity="center"
        android:text="@string/registerWantedList"
        android:textStyle="bold"
        android:textColor="#FFEB3B"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/registerComplaint"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/scrollview_shape"
        android:layout_margin="20sp"
        android:gravity="center"
        android:text="@string/registerComplaint"
        android:textStyle="bold"
        android:textColor="#FFEB3B"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/registerClient"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/scrollview_shape"
        android:layout_margin="20sp"
        android:gravity="center"
        android:text="@string/registerClients"
        android:textStyle="bold"
        android:textColor="#FFEB3B"
        android:textSize="20sp"/>

    </LinearLayout>
</LinearLayout>